syntax = "proto3";

package auth;

option go_package = "/proto/protopb;protopb";

service UserService{
rpc RegisterUser(RegisterRequest) returns (RegisterResponse);
rpc Login(LoginRequest) returns (LoginResponse);
rpc Logout(LogoutRequest) returns (LogoutResponse);
rpc GetUser(GetUserRequest) returns (GetUserResponse);
rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
  }
  
  message RegisterResponse {
    bool success = 1;
    string message = 2;
  }
  
  message LoginRequest {
    string username = 1;
    string password = 2;
  }
  
  message LoginResponse {
    bool success = 1;
    string token = 2;
    string message = 3;
    string user_id = 4;
  }

  message LogoutRequest {
    string token = 1;
  }
  
  message LogoutResponse {
    bool success = 1;
    string message = 2;
  }
  
  message GetUserRequest {
    string username = 1;
  }
  
  message GetUserResponse {
    string username = 1;
    string created_at = 2;
  }
  
  message ListUsersRequest {}
  
  message ListUsersResponse {
    repeated GetUserResponse users = 1;
  }